@@ -7,8 +7,9 @@ The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this 
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.1...HEAD][Unreleased]]
 *** Fixed
-- Original BNF has no strings so treat ~'~ and ~"~ as a symbols
+- In the BNF there are no strings so treat ~'~ and ~"~ as a symbols
 - Minor code cleanup: removed no longer needed ~comment-*~ variables
+- In the BNF there are no grouping brackets except angle ones. Fixed
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.3.0...0.3.1][0.3.1]] - 2019-03-17
 *** Fixed
@@ -20,7 +21,7 @@ The format is based on [[http://keepachangelog.com][Keep a Changelog]] and this 
 
 ** [[https://github.com/sergeyklay/bnf-mode/compare/0.1.0...0.2.0][0.2.0]] - 2019-03-16
 *** Changed
-- Comments are no longer use syntax table.  For more see `comment-use-syntax'
+- Comments are no longer use syntax table.  For more see ~comment-use-syntax~
 
 *** Fixed
 - Changed comment syntax from ~#~ to ~;~ to follow [[https://tools.ietf.org/html/rfc822#section-2.8][RFC822#2.8]]
